# banking_reminders

./: .gitignore  pyproject.toml
banking/: intermediate.py  load_data.py
dbt/: profiles.yml
sql/models/sources/: patrick_checking.yml
