[tool.poetry]
name = "banking"
version = "0.1.0"
description = ""
authors = ["patricknormile <patnormil@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.5"
duckdb = "1.2"
dbt-core = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
